styles/index.css
/* Universal-Section */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* font-styles-Section */

.fonts-inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
}

/* Header & Nav-Section */

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 120px;
    padding-right: 120px;
    background-color: #ffffff;
    width: 100%;
    box-sizing: border-box;
}

.logo {
    width: 139px;
    height: 60px;
}
.menu {
    display: flex;
    text-decoration-style: none;
    gap: 32px;
}
.menu li {
    list-style: none;
    font-size: 16px;
    font-weight: 500;
}
/* Nav-Button-Section */
.btn-1 a {
    text-decoration: none;
    color: #ffffff;
}
nav .btn-1 {
    min-width: 164px;
    height: 44px;
    border-radius: 4px;
    border: none;
    background-color: #30B868;
    font-size: 16px;
    font-weight: 600;
    padding: 12px 16px;
}
.btn-1:hover {
    background-color: #187940;
    box-shadow: 0 0 8px #187940;
}

/* hero-section */

.container {
    min-height: 674px;
    text-align: center;
    background-image: url('/assets/hero-bg2.png');
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container .container-secondary {
    width: 100%;
    max-width: 1600px;
    padding: 70px 120px 134px 120px;
    text-align: center;
    box-sizing: border-box;
}
.container-1st-text {
    margin: 0 auto;
    border-radius: 25px;
    background-color: #ffffff;
    width: 229px;
    height: 36px;
    text-align: center;
    padding: 8px 12px ;
    color: #30B868;
    font-size: 16px;
    font-weight: 500;
    gap: 6px;
    display: flex;
    justify-content: center;
}
.dot-png {
    padding-top: 2px;
}
.container-2nd-text {
    padding:16px;
    box-sizing: border-box;

}

.container-2nd-text h1 {
    font-size:xxx-large;
}

.container-2nd-text p {
    color: #ffffff;
    font-size: 18px;
    text-align: center;
    line-height: 20px;
    padding-top: 16px;
}

.btn-hero{
    display: flex;
    justify-content: center;
    gap: 16px;
}
.btn-hero .btn-hero1{
    width: 251px;
    height: 52px;
    font-size: 16px;
    color: #ffffff;
    border-radius: 4px;
    border: none;
    background-color: #30B868;
}
.btn-hero1 a {
    text-decoration: none;
    color: #ffffff;
}

.btn-hero .btn-hero2{
    width: 251px;
    height: 52px;
    font-size: 16px;
    color: #ffffff;
    border-radius: 4px;
    border: 1px solid #ffffff;
    background-color: #ffffff00;
    
}
.btn-hero2 a {
    text-decoration: none;
    color: #ffffff;
}

.btn-hero1:hover {
    background-color: #187940;
    box-shadow: 0 0 8px #ffffff;
}
.btn-hero2:hover {
    /* background-color: #187940; */
    box-shadow: 0 0 8px #ffffff;
}

/* Card-section */

#Card {
    text-align: center;
    background-color: #ffffff;
    padding-left: 120px;
    padding-right: 120px;
    width: 100%;
    box-sizing: border-box;
}

#Card .card-container{
    width: 100%;
    max-width: 1600px;
    height: 300px;
    margin: 0 auto;
    box-sizing: border-box;
}
.card-heading h2{
    padding-top: 30px;
    font-size: 48px;
    font-weight: bold;
    color: #001931;
    padding-bottom: 16px;
    margin: 0 auto;
}
.card-heading p{
    font-size:16px;
    color: #627382;
    line-height: 20px;
    margin: 0 auto;
    padding-bottom: 40px;
}
.card-container .card-box {
    display: flex;
    justify-content: center;
    align-items: stretch;
    gap:24px;
}
/* Card-container-Section */

.card-section {
    padding: 24px 24px;
    /* border: 1px solid black; */
    max-width: 0 auto;
    text-align: center;
    border-radius: 8px;
    box-shadow: 0px 0px 5px #0019313a;
}
.card-section img {
    max-width: 80px;
    max-height: 80px;
    background-color: #f95555;
    border-radius: 50%;
    padding: 10px 10px;
}
.card-section h3 {
    font-size: 24px;
    padding: 16px 0;
    font-weight: 600;
}
.card-section p{
    font-size: 16px;
    line-height: 20px;
    color: #627382;
}

/* Brain-Section */

#brain-section {
    width: 100%;
    text-align: center;
    padding-top: 120px;
    padding-bottom: 120px;
    padding-left: 120px;
    padding-right: 120px;
    box-sizing: border-box;

}
.brain-container {
    display: flex;
    align-items: center;
    gap: 120px;
    max-width: 1600px;
    width: 100%;
    margin: 0 auto;
}
.brain-main-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.brain-text {
    text-align: left;
    padding-right:inherit;
}
.brain-text h5 {
    font-size: 16px;
    color: #30B868;
    margin-bottom: 16px;
}
.brain-text h1 {
    font-size: 48px;
    margin-bottom: 16px;
    color: #001931;
    font-weight: bold;
}
.brain-header p {
    font-size: 16px;
    color: #627382;
    margin-bottom: 40px;
}
.features-list {
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.features-item {
    gap: 16px;
}
.feature-text {
    text-align: center;
}

/* Content-Section */

#content-box {
    display: flex;
    justify-content: center;
    padding-top: 0;
    padding-right: 120px;
    padding-left: 120px;
    padding-bottom: 120px ;
    background-color: #ffffff;
}

.content-box-2 {
    background-color: #f5f4f0;
    max-width: 1600px;
    width: 100%;
    padding: 80px 40px;
    text-align: center;
    border-radius: 8px;
}
.content-text h5{
    font-size: 40px;
    font-weight: bold;
    padding-bottom: 16px;
}
.content-text p{
    font-size: 16;
    color: #627382;
    margin-bottom: 24px;
}
.btn-4 {
    width: 194px;
    height: 52px;
    border-radius: 4px;
    border: none;
    background-color: #30B868;
    padding: 12px 16px;
    margin-bottom: 16px;
}
.btn-4 a{
    text-decoration: none;
    color: #ffffff;
}
.btn-4:hover{
    background-color: #187940;
    box-shadow: 0 0 8px #187940;
}
.content-btn-4 p{
    font-size: 16;
    color: #627382;
    margin-bottom: 24px;
}

/* footer-section */
footer {
    padding-top: 120px;
    padding-left: 120px;
    padding-right: 120px;
    padding-bottom: 30px;
    background-color: #001931;
    width: 100%;
    box-sizing: border-box;
    
}
.footer-1 {
    width: 100%;
    max-width: 1600px;
    display: flex;
    justify-content: space-between;
    box-sizing: border-box;
}
.footer-1 h5 {
    font-size: 20px;
    color: #ffffff;
    margin-bottom: 16px;
}
.footer-1 img {
    width: 139px;
    height: 60px;
}
.footer-logo {
    color:#ffffff
}
.copy p {
    color: #ffffff;
    text-align: center;
    font-size: 16px;
}

